k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neopro
  labels:
    app.kubernetes.io/name: neopro
    app.kubernetes.io/part-of: neopro-platform
